v0.9.0
------
- KSP 1.3
- Updated bundled MM to 2.8.0
- Updated bundled B9PartSwitch to 1.8.0
- Updated bundled CRP to ....
- Revised many part descriptions, tags and names
- Revised costs of batteries to correctly match stock batteries
- Revised costs of capacitors to be slightly more expensive (~1.5x) than before
- Battery and capacitor mass values are now 100% consistent
- Reactor numbering system revised for better sorting
- All reactors are now their inline variant by default
- MX-3L Hermes reactor now generates 6000 kW, up from 5000 kW. All other stats adjusted to match
- Rebalanced cost and mass of all reactors
- Rebalanced mass and cost of all nuclear fuel containers
- Reduced price of PB-AS-NUK RTG
- Increased mass of Whirlijig Nuclear Reprocessor
- Adjusted recipes for Whirlijig reprocessing/extraction to be less weird
- DecayingRTGs patch now cuts price of affected RTGs by 50%
- Changed CLS patch to behave better when CLS is not around

v0.8.7
------
- New 3.75m MX-5 'Hermes' nuclear reactor, generates 5000 kW of electricity
- New model for 3.75m FLAT nuclear reactor
- Radial capacitors are now physicsless
- Capacitors now have a user-configurable DischargeRateMinimumScalar field that can be used to edit the minimum discharge rate of a capacitor (previously locked at 50%)
- Reactors now have a new AutoWarpShutdown toggle which allows the user to set a reactor so that it gets shut down at warp factors greater or equal to the specified number
- Capacitor UI rewrite:
-- Significant visual improvements
-- Fixed a bug that caused capacitor rate setting in the UI to be erronous.
- Reactor UI rewrite:
-- Significant visual improvements
-- Reactors can now be given a persistent custom icon and name
-- Better data display and controls
-- Advanced control mode allowing the setting of the AutoShutdown temperature and a new AutoShutdown warp factor
- Added more RTGs to DecayingRTGs patch courtesy of OrenWatson