@@ -99,7 +99,7 @@ Localization
 	#LOC_NFElectrical_ModuleFissionReactor_Action_TogglePanelAction = Toggle Reactor Panel
 
 	#LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName = Start Reactor
-	#LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName = Toggle Reactor
+	#LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName = Toggle Reactor
 	#LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName = Deactivate Reactor
 
 	#LOC_NFElectrical_ModuleFissionReactor_Event_ShowReactorControl = Toggle Reactor Control
