@@ -60,15 +60,7 @@ PART
 
 		StartActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName
 		StopActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName
-
-		// Show or hide the staging icon
-		UseStagingIcon = true
-		// Force part activate on load
-		UseForcedActivation = true
-
-		UseSpecializationBonus = false
-		AutoShutdown = true
-		DefaultShutoffTemp = 0.90
+		ToggleActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName
 
 		// Heat animation, plays when above nominal temp
 		OverheatAnimation = Reactor_10kW_Heat
@@ -87,13 +79,6 @@ PART
 		// Base lifetime calculations off this resource
 		FuelName = EnrichedUranium
 
-		// Heating
-		GeneratesHeat = false
-		TemperatureModifier
-		{
-			key = 0 0 //10000	// this should be 200 kW required cooling????
-		}
-
 		INPUT_RESOURCE
 		{
 			ResourceName = EnrichedUranium
@@ -106,6 +91,16 @@ PART
 			Ratio = 0.00000023910
 			DumpExcess = false
 			FlowMode = NO_FLOW
+		}
+
+		// Disables stock converter functions DO NOT CHANGE
+		UseSpecializationBonus = false
+		AutoShutdown = false
+		DefaultShutoffTemp = 0.90
+		GeneratesHeat = false
+		TemperatureModifier
+		{
+			key = 0 0
 		}
 	}
 
