@@ -59,19 +59,11 @@ PART
 
 		StartActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName
 		StopActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName
+		ToggleActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName
 
-		// Show or hide the staging icon
-		UseStagingIcon = true
-		// Force part activate on load
-		UseForcedActivation = true
-
-		UseSpecializationBonus = false
-		AutoShutdown = true
-		DefaultShutoffTemp = 0.90
-
-		// Heat to generate per S at max power
+		// Heat (kW/s*50)
 		HeatGeneration = 40000
-		// Above this temp, less power is generated
+		// Above this temp, risky
 		NominalTemperature = 800
 		// Above this temp, reactor takes damage
 		CriticalTemperature = 1300
@@ -83,13 +75,6 @@ PART
 
 		// Base lifetime calculations off this resource
 		FuelName = EnrichedUranium
-
-		// Heating
-		GeneratesHeat = false
-		TemperatureModifier
-		{
-			key = 0 0 //60000
-		}
 
 		INPUT_RESOURCE
 		{
@@ -103,6 +88,16 @@ PART
 			Ratio = 0.00000141290
 			DumpExcess = false
 			FlowMode = NO_FLOW
+		}
+
+		// Disables stock converter functions DO NOT CHANGE
+		UseSpecializationBonus = false
+		AutoShutdown = false
+		DefaultShutoffTemp = 0.90
+		GeneratesHeat = false
+		TemperatureModifier
+		{
+			key = 0 0
 		}
 	}
 
