@@ -59,26 +59,15 @@ PART
 
 		StartActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName
 		StopActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName
+		ToggleActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName
 
-		// Show or hide the staging icon
-		UseStagingIcon = true
-		// Force part activate on load
-		UseForcedActivation = true
-
-		UseSpecializationBonus = false
-		AutoShutdown = true
-		DefaultShutoffTemp = 0.90
-
-		// Power generation spinup rate, in %/s
-		// This is 3 hours!
-		GeneratorSpinupRate = 0.1
-
-		// Heat to generate per S at max power
+		// Heat to generate (kW*50)
 		HeatGeneration = 200000
-		// Above this temp, less power is generated
+		// Above this temp more power output but risky
 		NominalTemperature = 900
 		// Above this temp, reactor takes damage
 		CriticalTemperature = 1300
+
 		// Amount of damage taken by core when over critical temp
 		// %/s/K, so with value 0.001, at 200 K over CriticalTemp, reactor takes 0.2% damage/s
 		CoreDamageRate = 0.006
@@ -87,22 +76,6 @@ PART
 
 		// Base lifetime calculations off this resource
 		FuelName = EnrichedUranium
-
-		PowerCurve
-		{
-			key = 0 0
-			key = 307.3983 163.379 2.286659 2.286659
-			key = 900 6000
-			key = 1260.976 6808.604 0.7080951 0.7080951
-			key = 1596.748 6945.541 // just before meltdown nice bonus
-		}
-
-		// Heating
-		GeneratesHeat = false
-		TemperatureModifier
-		{
-			key = 0 0 //300000
-		}
 
 		INPUT_RESOURCE
 		{
@@ -116,6 +89,16 @@ PART
 			Ratio =  0.000008695
 			DumpExcess = false
 			FlowMode = NO_FLOW
+		}
+
+		// Disables stock converter functions DO NOT CHANGE
+		UseSpecializationBonus = false
+		AutoShutdown = false
+		DefaultShutoffTemp = 0.90
+		GeneratesHeat = false
+		TemperatureModifier
+		{
+			key = 0 0
 		}
 
 	}
