@@ -61,20 +61,12 @@ PART
 
 		StartActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName
 		StopActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName
-
-		// Show or hide the staging icon
-		UseStagingIcon = true
-		// Force part activate on load
-		UseForcedActivation = true
-
-		UseSpecializationBonus = false
-		AutoShutdown = false
-		DefaultShutoffTemp = 0.90
+		ToggleActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName
 
 		// Heat animation, plays when above nominal temp
 		OverheatAnimation = Reactor_1MW_Heat
 
-		// Heat to generate (kW)
+		// Heat to generate (kW*50)
 		HeatGeneration = 175000
 		// Above this temp more power output but risky
 		NominalTemperature = 850
@@ -88,14 +80,6 @@ PART
 		// Base lifetime calculations off this resource
 		FuelName = EnrichedUranium
 
-		// Heating
-		GeneratesHeat = false
-		TemperatureModifier
-		{
-			key = 0 0
-		}
-		//250000
-
 		INPUT_RESOURCE
 		{
 			ResourceName = EnrichedUranium
@@ -108,6 +92,16 @@ PART
 			Ratio = 0.000006086
 			DumpExcess = false
 			FlowMode = NO_FLOW
+		}
+
+		// Disables stock converter functions DO NOT CHANGE
+		UseSpecializationBonus = false
+		AutoShutdown = false
+		DefaultShutoffTemp = 0.90
+		GeneratesHeat = false
+		TemperatureModifier
+		{
+			key = 0 0
 		}
 	}
 
@@ -132,7 +126,9 @@ PART
 	MODULE
 	{
 		name = FissionGenerator
+		// Power generated, kW
 		PowerGeneration = 2000
+		// Heat used to generate the power, kW
 		HeatUsed = 3500
 	}
 
