@@ -59,17 +59,9 @@ PART
 
 		StartActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StartActionName
 		StopActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_StopActionName
+		ToggleActionName = #LOC_NFElectrical_ModuleFissionReactor_Action_ToggleActionName
 
-		// Show or hide the staging icon
-		UseStagingIcon = true
-		// Force part activate on load
-		UseForcedActivation = true
-
-		UseSpecializationBonus = false
-		AutoShutdown = true
-		DefaultShutoffTemp = 0.90
-
-		// Heat to generate per S at max power
+		// Heat to generate (kW *50)
 		HeatGeneration = 150000
 		// Above this temp, less power is generated
 		NominalTemperature = 900
@@ -84,22 +76,6 @@ PART
 		// Base lifetime calculations off this resource
 		FuelName = EnrichedUranium
 
-		PowerCurve
-		{
-			key = 0 0 0 0
-			key = 307.3983 163.379 1.620077 2.286659
-			key = 900 4000
-			key = 1260.976 4208.604 0.7080951 0.7080951
-			key = 1596.748 5045.541 0 0
-		}
-
-		// Heating
-		GeneratesHeat = false
-		TemperatureModifier
-		{
-			key = 0 0 //200000
-		}
-
 		INPUT_RESOURCE
 		{
 			ResourceName = EnrichedUranium
@@ -112,6 +88,16 @@ PART
 			Ratio = 0.000005434
 			DumpExcess = false
 			FlowMode = NO_FLOW
+		}
+
+		// Disables stock converter functions DO NOT CHANGE
+		UseSpecializationBonus = false
+		AutoShutdown = false
+		DefaultShutoffTemp = 0.90
+		GeneratesHeat = false
+		TemperatureModifier
+		{
+			key = 0 0
 		}
 	}
 
